fix : 시큐리티 관련 오류 해결 (원인 : WebConfig에 addViewControllers)